Fixed the issue with stretched cards on safari

--- a/public/global.css
+++ b/public/global.css
@@ -170,7 +170,6 @@ input[type="radio"] {
   display: block;
   border-radius: 12px;
   text-align: center;
-  height: fit-content;
   width: 100%;
 }
 
